--- a/index.html
+++ b/index.html
@@ -313,50 +313,100 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <h2>Distinguished Speakers</h2>
+          <p>&#x1F469;&#x200D;&#x1F3EB; write somthing</p>
         </div>
 
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <img src="assets/img/testimonials/profPA.png" class="img-fluid" alt="">
+              <h4 class="title"><a href="">DR. PRAGYA SINGH
+                </a></h4>
+              <p class="description">Assistant Professor
+
+                Department of Management Studies, IIITA.</p>
             </div>
           </div>
-
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="200">
+            data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <img src="assets/img/testimonials/profK.png" class="img-fluid" alt="">
+              <h4 class="title"><a href="">PROF. K. CHIDANANDA GOWDA
+                </a></h4>
+              <p class="description">Former Vice-Chancellor,
+
+                Kuvempu University, Karnataka.</p>
             </div>
           </div>
-
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="300">
+            data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <img src="assets/img/testimonials/profU.png" class="img-fluid" alt="">
+              <h4 class="title"><a href="">PROF. UMA SHANKER TIWARY</a></h4>
+              <p class="description">Dean Human Affairs , IIITA
+
+                Ph.D.</p>
             </div>
           </div>
-
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="400">
+            data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <img src="assets/img/testimonials/profR.png" class="img-fluid" alt="">
+              <h4 class="title"><a href="">PROF. RAJBIR SINGH
+                </a></h4>
+              <p class="description">Professor , Behavioural Sciences
+
+                Shree Guru Gobind Singh
+                Tricentenary University.</p>
             </div>
           </div>
 
         </div>
+
+        <br>
+        <div class="row">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/testimonials/profSC.png" class="img-fluid" alt="">
+              <h4 class="title"><a href="">PROF. SUDHIR CHANDRA DAS
+                </a></h4>
+              <p class="description">Professor of OB & HR,
+
+                Department of Commerce,
+                Banaras Hindu University, Varanasi.</p>
+            </div>
+          </div>
+          <!-- <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/testimonials/profK.png" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            </div>
+          </div> -->
+          <!-- <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/testimonials/profU.png" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/testimonials/profR.png" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            </div>
+          </div> -->
+
+        </div>
+
+      </div>
 
       </div>
     </section><!-- End Services Section -->
@@ -525,15 +575,20 @@
       </div>
     </section><!-- End Portfolio Section -->
 
+
+
     <!-- ======= Testimonials Section ======= -->
+
+
+
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+          <h2>sdasodpsojfosdj</h2>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+            in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="owl-carousel testimonials-carousel">
@@ -561,7 +616,7 @@
             <h3>Sara Wilsson</h3>
             <h4>Designer</h4>
           </div>
-
+          <!-- 
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -584,9 +639,9 @@
             <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
             <h3>Matt Brandon</h3>
             <h4>Freelancer</h4>
-          </div>
+          </div> -->
 
-          <div class="testimonial-item">
+          <!-- <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa
@@ -596,7 +651,7 @@
             <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
             <h3>John Larson</h3>
             <h4>Entrepreneur</h4>
-          </div>
+          </div> -->
 
         </div>
 
@@ -618,7 +673,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/team-1.jpg" class="img-fluid " alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Walter White</h4>
