google form added

--- a/index.html
+++ b/index.html
@@ -651,6 +651,9 @@
 
       </div>
     </section><!-- End Testimonials Section -->
+    <div style="margin-left: 15%;"><iframe width="85%" height="600px"
+        src="https://docs.google.com/forms/d/e/1FAIpQLSeLrdeoay5e3ZB02t4Dv0MyRQNwUbM6YKuvGgGnQPph-Zs_9Q/viewform"></iframe>
+    </div>
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
