--- a/index.html
+++ b/index.html
@@ -441,9 +441,7 @@
             <div class="icon-box">
               <img src="assets/img/testimonials/profU.png" class="img-fluid" alt="">
               <h4 class="title"><a href="">PROF. UMA SHANKER TIWARY</a></h4>
-              <p class="description">Dean Human Affairs , IIITA
-
-                Ph.D.</p>
+              <p class="description">Dean Human Affairs , IIIT Ph.D.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
