--- a/index.html
+++ b/index.html
@@ -65,33 +65,14 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#features">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#services">Speakers</a></li>
+          <li><a href="#faq">Schedule</a></li>
+          <li><a href="#testimonials">Team</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
 
-      <!-- / <a href="#about" class="get-started-btn scrollto">Get Started</a> -->
+      <a href="#gform" class="get-started-btn scrollto">Participate</a>
 
     </div>
   </header><!-- End Header -->
@@ -506,7 +487,7 @@
     </section><!-- End Services Section -->
 
     <br><br>
-    <div style="margin-left: 15%;"><iframe width="85%" height="600px"
+    <div id="gform" style="margin-left: 15%;"><iframe width="85%" height="600px"
         src="https://docs.google.com/forms/d/e/1FAIpQLSeLrdeoay5e3ZB02t4Dv0MyRQNwUbM6YKuvGgGnQPph-Zs_9Q/viewform"></iframe>
     </div>
     <br><br>
