--- a/index.html
+++ b/index.html
@@ -924,93 +924,145 @@
           <h2>Distinguished Speakers</h2>
           <p>&#x1F469;&#x200D;&#x1F3EB; write somthing</p>
         </div>
+        <div class="row" style="
+    margin-top: 28px;
+">
+          <br><br>
 
-        <div class="row">
+
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box">
-              <img src="assets/img/testimonials/profK.png" class="img-fluid" alt="">
-              <h4 class="title"><a href="">PROF. K. CHIDANANDA GOWDA
+              <img src="assets/img/IYER.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Dr. Parameshwar P Iyer
                 </a></h4>
-              <p class="description">Former Vice-Chancellor,
-
-                Kuvempu University, Karnataka.</p>
+              <p class="description">Principal Scientist IISc Bangalore</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box">
-              <img src="assets/img/testimonials/profU.png" class="img-fluid" alt="">
-              <h4 class="title"><a href="">PROF. UMA SHANKER TIWARY</a></h4>
-              <p class="description">Dean Human Affairs , IIIT Ph.D.</p>
+              <img src="assets/img/praveen.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">DR. Praveen Ranjan Srivastava</a></h4>
+              <p class="description">Associate Professor , IIM Rohtak</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box">
-              <img src="assets/img/testimonials/profR.png" class="img-fluid" alt="">
-              <h4 class="title"><a href="">PROF. RAJBIR SINGH
+              <img src="assets/img/madhvendra.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Dr. Madhvendra Misra
                 </a></h4>
-              <p class="description">Professor , Behavioural Sciences
-
-                Shree Guru Gobind Singh
-                Tricentenary University.</p>
+              <p class="description">Associate Professor IIITA</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box">
-              <img src="assets/img/testimonials/profSC.png" class="img-fluid" alt="">
-              <h4 class="title"><a href="">PROF. SUDHIR CHANDRA DAS
-                </a></h4>
-              <p class="description">Professor of OB & HR,
-
-                Department of Commerce,
-                Banaras Hindu University, Varanasi.</p>
+              <img src="assets/img/satish.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href=""> Dr. Satish Kr. Sharma </a></h4>
+              <p class="description">G B Pant Uni. of Agriculture & Tech. Pantnagar, India</p>
             </div>
           </div>
+
+
+
         </div>
 
-        <br>
-        <div class="row">
+
+        <div class="row" style="
+    margin-top: 28px;
+">
+          <br><br>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/Screenshot (113).png" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Mr. Sumit Agarwal
+                </a></h4>
+              <p class="description">Chartered Accountant , Allahabad</p>
+            </div>
+          </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box">
-              <img src="assets/img/testimonials/profPA.png" class="img-fluid" alt="">
-              <h4 class="title"><a href="">DR. PRAGYA SINGH
+              <img src="assets/img/shefali.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Dr. Shefali Nandan
                 </a></h4>
               <p class="description">Assistant Professor
 
-                Department of Management Studies, IIITA.</p>
-            </div>
-          </div>
-          <!-- <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="100">
-            <div class="icon-box">
-              <img src="assets/img/testimonials/profK.png" class="img-fluid" alt="">
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
-            </div>
-          </div> -->
-          <!-- <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="100">
-            <div class="icon-box">
-              <img src="assets/img/testimonials/profU.png" class="img-fluid" alt="">
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                ,MONIRBA, University of Allahabad</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box">
-              <img src="assets/img/testimonials/profR.png" class="img-fluid" alt="">
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <img src="assets/img/mamta.jpeg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Ms. Mamta Gupta
+                </a></h4>
+              <p class="description">Chartered Accountant , Allahabad</p>
             </div>
-          </div> -->
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/shailendrak.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">DR. Shailendra KumR
+                </a></h4>
+              <p class="description">Assistant Professor
+                , IIITA.</p>
+            </div>
+          </div>
+
+
+
+
+
+          <br>
+          <br>
+          <div class="row" style="
+    margin-top: 28px;
+">
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+              data-aos-delay="100">
+              <div class="icon-box">
+                <img src="assets/img/ranjana.jpg" class="img-fluid" alt="">
+                <h4 class="title"><a href="">dR. Ranjana Vyas
+                  </a></h4>
+                <p class="description"> PI & Coordinator, NEW GEN IEDC,IIITA</p>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+              data-aos-delay="100">
+              <div class="icon-box">
+                <img src="assets/img/rkala.jpg" class="img-fluid" alt="">
+                <h4 class="title"><a href="">Dr. Rahul Kala
+                  </a></h4>
+                <p class="description">Assistant Professor
+
+                  ,MONIRBA, University of Allahabad</p>
+              </div>
+            </div>
+
+
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+              data-aos-delay="100">
+              <div class="icon-box">
+                <img src="assets/img/testimonials/profPA.png" class="img-fluid" alt="">
+                <h4 class="title"><a href="">DR. PRAGYA SINGH
+                  </a></h4>
+                <p class="description">Assistant Professor
+                  Department of Management Studies, IIITA.</p>
+              </div>
+            </div>
+          </div>
 
         </div>
+
+      </div>
 
       </div>
 
