--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <ul>
           <li class="active"><a href="#hero">Home</a></li>
           <li><a href="#features">About</a></li>
+          <li><a href="#portfolio">Schedule</a></li>
           <li><a href="#services">Speakers</a></li>
-          <li><a href="#faq">Schedule</a></li>
           <li><a href="#testimonials">Team</a></li>
 
         </ul>
