--- a/index.html
+++ b/index.html
@@ -254,12 +254,54 @@
     </section><!-- End Features Section -->
 
 
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container">
+
+        <div class="row no-gutters">
+          <div class="content col-xl-2 d-flex align-items-stretch" data-aos="fade-right">
+            <div class="content">
+              <!--a href="#" class="about-btn">About us <i class="bx bx-chevron-right"></i></a-->
+            </div>
+          </div>
+          <div class="content col-xl-10 d-flex align-items-stretch " data-aos="fade-left">
+            <div class="icon-boxes d-flex flex-column justify-content-center">
+              <div class="row">
+				<div class="col-md-12 icon-box" data-aos="fade-up" data-aos-delay="100">
+                  <!--i class="bx bx-receipt"></i-->
+                  <h1 style="font-family: 'Cinzel Decorative';">Who Can Attend ?</h1>
+                </div>
+                <div class="col-md-12 icon-box" data-aos="fade-up" data-aos-delay="100">
+                  <!--i class="bx bx-receipt"></i-->
+                  <h4><i class="icofont-check"></i>Faculty Members from all Science &Technology Institutes</h4>
+                </div>
+                <div class="col-md-12 icon-box" data-aos="fade-up" data-aos-delay="200">
+                  <!--i class="bx bx-cube-alt"></i-->
+                  <h4><i class="icofont-check"></i>Trainers from Organizations engaged in Entrepreneurship</h4>
+                </div>
+                <div class="col-md-12 icon-box" data-aos="fade-up" data-aos-delay="300">
+                  <!--i class="bx bx-images"></i-->
+                  <h4><i class="icofont-check"></i>FIndustry Professionals</h4>
+                </div>
+                <div class="col-md-12 icon-box" data-aos="fade-up" data-aos-delay="400">
+                  <!--i class="bx bx-shield"></i-->
+                  <h4><i class="icofont-check"></i>Administrative Officers</h4>
+                </div>
+              </div>
+            </div><!-- End .content-->
+          </div>
+        </div>
+
+      </div>
+    </section>
+	<!-- End About Section -->
+
 
     <section id="portfolio" class="portfolio">
       <div class="container aos-init aos-animate" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>schedule</h2>
+          <h2>Schedule</h2>
         </div>
 
         <div class="row">
@@ -1214,57 +1256,6 @@
     <!-- End Schedule Section -->
 
 
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container">
-
-        <div class="row no-gutters">
-          <div class="content col-xl-5 d-flex align-items-stretch" data-aos="fade-right">
-
-            <div class="content">
-              <h2 style="font-family: 'Advent Pro';">DST SPONSORED</h2>
-              <h1>TWELVE DAY FDP</h1>
-              <h1 style="font-family: 'Cinzel Decorative';">MAKING SELF SUFFICIENT ENTREPRENEURS & INNOVATORS</h1>
-
-
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Duis aute irure dolor in reprehenderit
-              </p>
-              <a href="#" class="about-btn">About us <i class="bx bx-chevron-right"></i></a>
-            </div>
-          </div>
-          <div class="col-xl-7 d-flex align-items-stretch" data-aos="fade-left">
-            <div class="icon-boxes d-flex flex-column justify-content-center">
-              <div class="row">
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-                  <i class="bx bx-receipt"></i>
-                  <h4>Corporis voluptates sit</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
-                </div>
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-                  <i class="bx bx-cube-alt"></i>
-                  <h4>Ullamco laboris nisi</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                </div>
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-                  <i class="bx bx-images"></i>
-                  <h4>Labore consequatur</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
-                </div>
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-                  <i class="bx bx-shield"></i>
-                  <h4>Beatae veritatis</h4>
-                  <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
-                </div>
-              </div>
-            </div><!-- End .content-->
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End About Section -->
-
 
 
 
@@ -1435,12 +1426,24 @@
 
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
-
+		<div class="section-title">
+          <h2>Course Co-ordinator</h2>
+        </div>
+		
+          <div class="testimonial-item">
+            <img src="assets/img/testimonials/profPA.png" alt="" height="325">
+            <h4 class="title">DR. PRAGYA SINGH </h4><br/>
+                <p class="description">Assistant Professor<br>
+                Department of Management Studies, IIITA.<br>
+				<strong>Email:</strong> pragyabhardwaj@iiita.ac.in<br>
+				<strong>Phone:</strong> 7897386365<br>
+				<strong><a href="https://iiita.irins.org/profile/102977">Profile</a></strong>
+				</p>	
+            <br>
+          </div>
+		
         <div class="section-title">
           <h2>Technical Committee</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="owl-carousel testimonials-carousel">
@@ -1530,44 +1533,6 @@
             <h4>9041265098</h4>
             <br>
           </div>
-
-          <!-- 
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor
-              labore quem eram duis noster aute amet eram fore quis sint minim.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
-          </div>
-
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim
-              dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-            <h3>Matt Brandon</h3>
-            <h4>Freelancer</h4>
-          </div> -->
-
-          <!-- <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa
-              labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-            <h3>John Larson</h3>
-            <h4>Entrepreneur</h4>
-          </div> -->
-
         </div>
 
       </div>
