--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,7 @@
 
         <div class="section-title">
           <h2>Distinguished Speakers</h2>
-          <p>&#x1F469;&#x200D;&#x1F3EB; write somthing</p>
+          <!-- <p>&#x1F469;&#x200D;&#x1F3EB; write somthing</p> -->
         </div>
         <div class="row" style="
     margin-top: 28px;
