--- a/index.html
+++ b/index.html
@@ -1610,7 +1610,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <script>
+  </script>
 </body>
 
 </html>
