--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         & INNOVATORS</h1>
       <h3 style="color: white; font-family: 'Alegreya SC'">(TWO WEEKS)</h3>
 
-      <a href="#" class="btn-get-started scrollto">DOWNLOAD BROCHURE</a>
+      <a href="assets/brochure.pdf" target="_blank" class="btn-get-started scrollto">DOWNLOAD BROCHURE</a>
       <!--img src="assets/img/iiita3.jpg" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150"-->
     </div>
 
