--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features" data-aos="fade-up">
+    <section id="features" class="features" style="background-color: #40E0D0;" data-aos="fade-up">
       <div class="container">
 
         <div class="section-title">
@@ -225,7 +225,7 @@
 
         <div class="row content">
           <div class="col-md-5" data-aos="fade-right">
-            <img src="assets/img/2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/leftpic.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5" data-aos="fade-left">
             <h3>Course Learning Outcomes</h3>
