--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <ul>
           <li class="active"><a href="#hero">Home</a></li>
           <li><a href="#features">About</a></li>
+		  <li><a href="#services">Speakers</a></li>
           <li><a href="#portfolio">Schedule</a></li>
-          <li><a href="#services">Speakers</a></li>
           <li><a href="#testimonials">Team</a></li>
 
         </ul>
@@ -254,6 +254,176 @@
     </section><!-- End Features Section -->
 
 
+	
+	
+
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
+      <div class="container" data-aos="fade-up">
+	  
+	  <div class="section-title">
+          <h2>Chief Patron</h2>
+        </div>
+      <div class="container" data-aos="fade-up"  data-aos-delay="100">
+          <div class="testimonial-item icon-box">
+            <img src="assets/img/pnagabhushan.jpg" alt=""height="325"><br>
+            <h4 class="title">PROF. P. NAGABHUSHAN </h4><br/>
+                <p class="description">Director, IIITA<br>
+                B.E., M.Tech., Ph.D., FIE, FIETE.<br>
+				</p>	
+            <br>
+          </div>
+		</div>
+		
+		  
+        <div class="section-title">
+          <h2>Distinguished Speakers</h2>
+        </div>
+        <div class="row" style="margin-top: 28px;">
+          <br><br>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/IYER.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Dr. Parameshwar P Iyer
+                </a></h4>
+              <p class="description">Principal Scientist IISc Bangalore</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/praveen.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">DR. Praveen Ranjan Srivastava</a></h4>
+              <p class="description">Associate Professor , IIM Rohtak</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/madhvendra.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Dr. Madhvendra Misra
+                </a></h4>
+              <p class="description">Associate Professor IIITA</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/satish.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href=""> Dr. Satish Kr. Sharma </a></h4>
+              <p class="description">G B Pant Uni. of Agriculture & Tech. Pantnagar, India</p>
+            </div>
+          </div>
+
+
+
+        </div>
+
+
+        <div class="row" style="
+    margin-top: 28px;
+">
+          <br><br>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/Screenshot (113).png" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Mr. Sumit Agarwal
+                </a></h4>
+              <p class="description">Chartered Accountant , Allahabad</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/shefali.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Dr. Shefali Nandan
+                </a></h4>
+              <p class="description">Assistant Professor
+
+                ,MONIRBA, University of Allahabad</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/mamta.jpeg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">Ms. Mamta Gupta
+                </a></h4>
+              <p class="description">Chartered Accountant , Allahabad</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <img src="assets/img/shailendrak.jpg" class="img-fluid" alt="">
+              <h4 class="title"><a href="">DR. Shailendra KumR
+                </a></h4>
+              <p class="description">Assistant Professor
+                , IIITA.</p>
+            </div>
+          </div>
+
+
+
+
+
+          <br>
+          <br>
+          <div class="row" style="
+    margin-top: 28px;
+">
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+              data-aos-delay="100">
+              <div class="icon-box">
+                <img src="assets/img/ranjana.jpg" class="img-fluid" alt="">
+                <h4 class="title"><a href="">dR. Ranjana Vyas
+                  </a></h4>
+                <p class="description"> PI & Coordinator, NEW GEN IEDC,IIITA</p>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+              data-aos-delay="100">
+              <div class="icon-box">
+                <img src="assets/img/rkala.jpg" class="img-fluid" alt="">
+                <h4 class="title"><a href="">Dr. Rahul Kala
+                  </a></h4>
+                <p class="description">Assistant Professor
+
+                  ,MONIRBA, University of Allahabad</p>
+              </div>
+            </div>
+
+
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+              data-aos-delay="100">
+              <div class="icon-box">
+                <img src="assets/img/testimonials/profPA.png" class="img-fluid" alt="">
+                <h4 class="title"><a href="">DR. PRAGYA SINGH
+                  </a></h4>
+                <p class="description">Assistant Professor
+                  Department of Management Studies, IIITA.</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+      </div>
+
+      </div>
+    </section><!-- End Services Section -->
+	
+	
+	
+	
+	
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
@@ -1259,159 +1429,6 @@
 
 
 
-
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Distinguished Speakers</h2>
-          <p>&#x1F469;&#x200D;&#x1F3EB; write somthing</p>
-        </div>
-        <div class="row" style="
-    margin-top: 28px;
-">
-          <br><br>
-
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="100">
-            <div class="icon-box">
-              <img src="assets/img/IYER.jpg" class="img-fluid" alt="">
-              <h4 class="title"><a href="">Dr. Parameshwar P Iyer
-                </a></h4>
-              <p class="description">Principal Scientist IISc Bangalore</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="100">
-            <div class="icon-box">
-              <img src="assets/img/praveen.jpg" class="img-fluid" alt="">
-              <h4 class="title"><a href="">DR. Praveen Ranjan Srivastava</a></h4>
-              <p class="description">Associate Professor , IIM Rohtak</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="100">
-            <div class="icon-box">
-              <img src="assets/img/madhvendra.jpg" class="img-fluid" alt="">
-              <h4 class="title"><a href="">Dr. Madhvendra Misra
-                </a></h4>
-              <p class="description">Associate Professor IIITA</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="100">
-            <div class="icon-box">
-              <img src="assets/img/satish.jpg" class="img-fluid" alt="">
-              <h4 class="title"><a href=""> Dr. Satish Kr. Sharma </a></h4>
-              <p class="description">G B Pant Uni. of Agriculture & Tech. Pantnagar, India</p>
-            </div>
-          </div>
-
-
-
-        </div>
-
-
-        <div class="row" style="
-    margin-top: 28px;
-">
-          <br><br>
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="100">
-            <div class="icon-box">
-              <img src="assets/img/Screenshot (113).png" class="img-fluid" alt="">
-              <h4 class="title"><a href="">Mr. Sumit Agarwal
-                </a></h4>
-              <p class="description">Chartered Accountant , Allahabad</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="100">
-            <div class="icon-box">
-              <img src="assets/img/shefali.jpg" class="img-fluid" alt="">
-              <h4 class="title"><a href="">Dr. Shefali Nandan
-                </a></h4>
-              <p class="description">Assistant Professor
-
-                ,MONIRBA, University of Allahabad</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="100">
-            <div class="icon-box">
-              <img src="assets/img/mamta.jpeg" class="img-fluid" alt="">
-              <h4 class="title"><a href="">Ms. Mamta Gupta
-                </a></h4>
-              <p class="description">Chartered Accountant , Allahabad</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="100">
-            <div class="icon-box">
-              <img src="assets/img/shailendrak.jpg" class="img-fluid" alt="">
-              <h4 class="title"><a href="">DR. Shailendra KumR
-                </a></h4>
-              <p class="description">Assistant Professor
-                , IIITA.</p>
-            </div>
-          </div>
-
-
-
-
-
-          <br>
-          <br>
-          <div class="row" style="
-    margin-top: 28px;
-">
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-              data-aos-delay="100">
-              <div class="icon-box">
-                <img src="assets/img/ranjana.jpg" class="img-fluid" alt="">
-                <h4 class="title"><a href="">dR. Ranjana Vyas
-                  </a></h4>
-                <p class="description"> PI & Coordinator, NEW GEN IEDC,IIITA</p>
-              </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-              data-aos-delay="100">
-              <div class="icon-box">
-                <img src="assets/img/rkala.jpg" class="img-fluid" alt="">
-                <h4 class="title"><a href="">Dr. Rahul Kala
-                  </a></h4>
-                <p class="description">Assistant Professor
-
-                  ,MONIRBA, University of Allahabad</p>
-              </div>
-            </div>
-
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-              data-aos-delay="100">
-              <div class="icon-box">
-                <img src="assets/img/testimonials/profPA.png" class="img-fluid" alt="">
-                <h4 class="title"><a href="">DR. PRAGYA SINGH
-                  </a></h4>
-                <p class="description">Assistant Professor
-                  Department of Management Studies, IIITA.</p>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-      </div>
-
-      </div>
-    </section><!-- End Services Section -->
 
     <br><br>
     <div id="gform" style="margin-left: 15%;"><iframe width="85%" height="600px"
