--- a/index.html
+++ b/index.html
@@ -1466,7 +1466,7 @@
             Department of Management Studies, IIITA.<br>
             <strong>Email:</strong> pragyabhardwaj@iiita.ac.in<br>
             <strong>Phone:</strong> 7897386365<br>
-            <strong><a href="https://iiita.irins.org/profile/102977">Profile</a></strong>
+            <strong><a href="https://iiita.irins.org/profile/102977"  target="_blank">Profile</a></strong>
           </p>
           <br>
         </div>
