--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
           </div>
 
           <div class="testimonial-item icon-box">
-            <img src="assets/img/VijayshriP.jpg" class="img-fluid circular--square" alt=""><br>
+            <img src="assets/img/vijayshri.jpg" class="img-fluid circular--square" alt=""><br>
             <h4 class="title">Dr. VIJAYSHRI TEWARI</h4><br />
             <p class="description">Associate Professor<br>
             </p>
