commit 1 on jan 13 20 rishi

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <li><a href="#services">Speakers</a></li>
           <!--li> <a href="#gform" class="get-started-btn scrollto">Participate</a></li-->
           <li> <a target="_blank"
-              href="https://docs.google.com/forms/d/e/1FAIpQLSeLrdeoay5e3ZB02t4Dv0MyRQNwUbM6YKuvGgGnQPph-Zs_9Q/viewform">Resgistration</a>
+              href="https://docs.google.com/forms/d/e/1FAIpQLSeLrdeoay5e3ZB02t4Dv0MyRQNwUbM6YKuvGgGnQPph-Zs_9Q/viewform">Registration</a>
           </li>
           <li><a href="#testimonials">Contacts</a></li>
 
@@ -1302,11 +1302,8 @@
             <h4 class="title">PROF. P. NAGABHUSHAN </h4><br />
             <p class="description">Director, IIITA<br>
             </p>
-            <br>
-          </div>
-          <br>
-
-          <div class="testimonial-item icon-box">
+            <br><br><br><br>
+          
             <img src="assets/img/vijayshri.jpg" class="img-fluid circular--square" alt=""><br>
             <h4 class="title">Dr. VIJAYSHRI TEWARI</h4><br />
             <p class="description">Associate Professor<br>
@@ -1315,8 +1312,6 @@
             </p>
             <br>
           </div>
-
-
         </div>
 
         <br><br><br>
@@ -1403,7 +1398,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box">
-              <img src="assets/img/RanjitP.JPG" class="img-fluid circular--square" alt="">
+              <img src="assets/img/ranjitsingh.JPG" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Ranjit Singh
               </h4>
               <p class="description">Associate Professor IIITA<br>
