--- a/index.html
+++ b/index.html
@@ -1325,7 +1325,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/IYER.jpg" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Parameshwar P Iyer
               </h4>
@@ -1334,7 +1334,7 @@
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/praveen.jpg" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Praveen Ranjan Srivastava</h4>
               <p class="description">Associate Professor , IIM Rohtak</p>
@@ -1342,7 +1342,7 @@
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/satish.jpg" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Satish Kr. Sharma</h4>
               <p class="description">G B Pant Uni. of Agriculture & Tech. Pantnagar, India</p>
@@ -1350,7 +1350,7 @@
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/mamta.jpeg" class="img-fluid circular--square" alt="">
               <h4 class="title">Ms. Mamta Gupta
               </h4>
@@ -1365,7 +1365,7 @@
           <br><br>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/Screenshot (113).png" class="img-fluid circular--square" alt="">
               <h4 class="title">Mr. Sumit Agarwal
               </h4>
@@ -1375,7 +1375,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/shefali.jpg" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Shefali Nandan
               </h4>
@@ -1387,7 +1387,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/madhvendra.jpg" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Madhvendra Misra
               </h4>
@@ -1397,7 +1397,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/ranjitsingh.JPG" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Ranjit Singh
               </h4>
@@ -1416,7 +1416,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/shailendrak.jpg" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Shailendra Kumar
               </h4>
@@ -1430,7 +1430,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/ranjana.jpg" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Ranjana Vyas
               </h4>
@@ -1440,7 +1440,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/rkala.jpg" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Rahul Kala
               </h4>
@@ -1451,7 +1451,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width:100%">
               <img src="assets/img/testimonials/profPA.png" class="img-fluid circular--square" alt="">
               <h4 class="title">Dr. Pragya Singh
               </h4>
