--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <div class="col-md-7 pt-5" data-aos="fade-left">
 
 
-            <h3>Course Structure</h3>
+            <h3>COURSE STRUCTURE</h3>
             <ul>
               <li><i class="icofont-check"></i> Entrepreneurship Development Process</li>
               <li><i class="icofont-check"></i> Approaches for Entrepreneurship Development</li>
@@ -272,7 +272,7 @@
               <li><i class="icofont-check"></i> Pre-feasibility of Project through Market Survey</li>
             </ul>
 
-            <h3>Course Learning Outcomes</h3>
+            <h3>COURSE LEARNING OUTCOMES</h3>
             <p>The members develop and can systematically apply an entrepreneurial way of thinking that will allow them
               to
               identify and create business opportunities that may be commercialized successfully. </p>
