--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
           <li><a href="#portfolio">SCHEDULE</a></li>
           <li><a href="#services">SPEAKERS</a></li>
           <!--li> <a href="#gform" class="get-started-btn scrollto">Participate</a></li-->
-          <li> <a target="_blank"
-              href="https://docs.google.com/forms/d/e/1FAIpQLSeLrdeoay5e3ZB02t4Dv0MyRQNwUbM6YKuvGgGnQPph-Zs_9Q/viewform">REGISTRATION</a>
+          <li> <a target="_blank" href="#gform">REGISTRATION</a>
           </li>
           <li><a href="#testimonials">CONTACTS</a></li>
 
@@ -357,27 +356,20 @@
 
 
 
-          <div class="col-lg-12 col-md-12 mt-12 mt-md-0 aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-12 col-md-12 mt-12 mt-md-0 aos-init aos-animate" id="gform" data-aos="zoom-in"
+            data-aos-delay="100">
             <div class="box featured">
               <ul>
-                <li>For faculty Members,Trainer,Industry,Professional and Administrative officer
-                  <p>
-
-
-
-
-
-
-
-
+                <li>1. For Faculty Members, Trainers, Industry
+                  Professionals and Administrative officers. <p>
                     <br>
 
                     <b>Registration Fee</b>
 
-                    : <b>Rs 1180</b> *(Inclusive of 18% of GST)
+                    : <b>₹ 1180</b> *(Inclusive of 18% of GST)
                   </p>
                 </li>
-                <li>For Research Scholar and Students (UG,PG)
+                <li>For Research Scholars and Students (UG, PG).
                   <p>
 
                     <br>
@@ -387,12 +379,29 @@
                     : <b>Rs 590</b> *(Inclusive of 18% of GST)
                   </p>
                 </li>
+                <li>For IEEE Members (IEEE members will be provided
+                  a 50% rebate on fee for registration)<p>
+
+                    <br>
+                    <b>a. For Utility Professionals & Industry Stakeholders:
+                    </b>
+                    <br>
+
+                    <b>Registration Fee</b>
+
+                    : <b>Rs 590</b> *(Inclusive of 18% of GST)
+                  </p>
+                  <p>b. For Students:
+                    <br>
+                    <b>Registration Fee</b>
+                    : <b>Rs 295</b> *(Inclusive of 18% GST)
+                  </p>
+                </li>
 
               </ul>
               <div class="btn-wrap">
-                <a href=""
-                  https://docs.google.com/forms/d/e/1FAIpQLSeLrdeoay5e3ZB02t4Dv0MyRQNwUbM6YKuvGgGnQPph-Zs_9Q/viewform""
-                  class="btn-buy">REGISTER</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLrdeoay5e3ZB02t4Dv0MyRQNwUbM6YKuvGgGnQPph-Zs_9Q/viewform"
+                  target="_blank" class="btn-buy">REGISTER</a>
               </div>
             </div>
           </div>
