--- a/index.html
+++ b/index.html
@@ -383,8 +383,7 @@
                   a 50% rebate on fee for registration)<p>
 
                     <br>
-                    <b>a. For Utility Professionals & Industry Stakeholders:
-                    </b>
+                    a. For Utility Professionals & Industry Stakeholders:
                     <br>
 
                     <b>Registration Fee</b>
